{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 156,
  "lineage": "0edbb319-89eb-4334-4e19-6e7df41e3c6b",
  "resources": [
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Spoke_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/networkInterfaces/spoke-nic",
            "internal_domain_name_suffix": "2skjmet1jbkulhpue45kqhkora.ex.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke_vm",
                "primary": true,
                "private_ip_address": "10.0.1.254",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet/subnets/spoke_internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northcentralus",
            "mac_address": "7C-ED-8D-C8-3E-69",
            "name": "spoke-nic",
            "private_ip_address": "10.0.1.254",
            "private_ip_addresses": [
              "10.0.1.254"
            ],
            "resource_group_name": "rg-core-resource",
            "virtual_machine_id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Compute/virtualMachines/Linux-spoke-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke-nic",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.computing.azurerm_resource_group.rg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.spoke_internal",
            "module.network.azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "core_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/networkInterfaces/core-nic",
            "internal_domain_name_suffix": "qxqhz5u3pkluhdglipvv5cuqbd.ex.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "core_vm",
                "primary": true,
                "private_ip_address": "10.0.0.254",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet/subnets/core_internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northcentralus",
            "name": "core-nic",
            "private_ip_address": "10.0.0.254",
            "private_ip_addresses": [
              "10.0.0.254"
            ],
            "resource_group_name": "rg-core-resource"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "core-nic",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.computing.azurerm_resource_group.rg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.core_internal",
            "module.network.azurerm_virtual_network.core_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Allows_in_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/networkSecurityGroups/Allows_in_core",
            "location": "northcentralus",
            "name": "Allows_in_core",
            "resource_group_name": "rg-core-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-ICMP",
                "priority": 110,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allows_in_core",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Allows_in_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/networkSecurityGroups/Allows_in_spoke",
            "location": "northcentralus",
            "name": "Allows_in_spoke",
            "resource_group_name": "rg-core-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-ICMP",
                "priority": 110,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allows_in_spoke",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet/subnets/core_internal",
            "name": "core_internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-core-resource",
            "virtual_network_name": "core_vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "core_internal",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645",
            "virtual_network_name": "core_vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.core_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet/subnets/spoke_internal",
            "name": "spoke_internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-core-resource",
            "virtual_network_name": "spoke_vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke_internal",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645",
            "virtual_network_name": "spoke_vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "core_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fe7ce085-7a9d-4397-8ccb-43eb5f8a900b",
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet",
            "location": "northcentralus",
            "name": "core_vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-core-resource",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet/subnets/core_internal",
                "name": "core_internal",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "core_vnet",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "129694e4-487b-4555-9df4-27bea81d4e88",
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet",
            "location": "northcentralus",
            "name": "spoke_vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-core-resource",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet/subnets/spoke_internal",
                "name": "spoke_internal",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spoke_vnet",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "CoreVnet-SpokeVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet/virtualNetworkPeerings/CoreVnet-SpokeVnet",
            "name": "CoreVnet-SpokeVnet",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet",
            "resource_group_name": "rg-core-resource",
            "use_remote_gateways": false,
            "virtual_network_name": "core_vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "CoreVnet-SpokeVnet",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645",
            "virtual_network_name": "core_vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.core_vnet",
            "module.network.azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "SpokeVnet-CoreVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/spoke_vnet/virtualNetworkPeerings/SpokeVnet-CoreVnet",
            "name": "SpokeVnet-CoreVnet",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/71bdfdd9-5921-4010-a5e8-09453f314645/resourceGroups/rg-core-resource/providers/Microsoft.Network/virtualNetworks/core_vnet",
            "resource_group_name": "rg-core-resource",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke_vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "SpokeVnet-CoreVnet",
            "resource_group_name": "rg-core-resource",
            "subscription_id": "71bdfdd9-5921-4010-a5e8-09453f314645",
            "virtual_network_name": "spoke_vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.core_vnet",
            "module.network.azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    }
  ]
}